--- a/src/components/operationImage/crop.less
+++ b/src/components/operationImage/crop.less
@@ -28,7 +28,7 @@
         right: 0;
         top: 0;
         //线宽
-        @border-line-width: 2px;
+        @border-line-width: 2px;//ignored
         .cropper-view-box{
             display: block;
             height: 100%;
@@ -72,7 +72,7 @@
               position: absolute;
               width: 100%;
         }
-        @border-outline-width: 10px;
+        @border-outline-width: 10px;//ignored
         .cropper-line {
           display: block;
           height: 100%;
@@ -80,42 +80,42 @@
           position: absolute;
           &.line-e {
             cursor: ew-resize;
-            right: -3px;
+            right: -3px;//ignored
             top: 0;
-            width: 5px;
+            width: 5px;//ignored
             padding-left: @border-outline-width;
           }
 
           &.line-n {
             cursor: ns-resize;
-            height: 5px;
+            height: 5px;//ignored
             left: 0;
-            top: -3px;
+            top: -3px;//ignored
             width: 100%;
             padding-bottom: @border-outline-width;
           }
 
           &.line-w {
             cursor: ew-resize;
-            left: -3px;
+            left: -3px;//ignored
             top: 0;
-            width: 5px;
+            width: 5px;//ignored
             padding-right: @border-outline-width;
           }
 
           &.line-s {
-            bottom: -3px;
+            bottom: -3px;//ignored
             cursor: ns-resize;
-            height: 5px;
+            height: 5px;//ignored
             left: 0;
             width: 100%;
             padding-top: @border-outline-width;
           }
         }
         //边框厚度
-        @border-width: 5px;
+        @border-width: 5px;//ignored
         //边框长度
-        @border-long: 15px;
+        @border-long: 15px;//ignored
 
         .cropper-point {
           display: block;
