--- a/src/components/operationImage/crop.less
+++ b/src/components/operationImage/crop.less
@@ -120,6 +120,7 @@
         .cropper-point {
           display: block;
           position: absolute;
+          background-color: inherit;
           &.point-ne {
             border-top: @border-width solid #fff;
             border-right: @border-width solid #fff;
