新增调试代码

--- a/src/components/operationImage/crop.less
+++ b/src/components/operationImage/crop.less
@@ -36,6 +36,9 @@
             outline: @border-line-width solid #fff;
             overflow: hidden;
             width: 100%;
+            >img{
+              max-width: inherit;
+            }
         }
         .cropper-dashed {
           border: 0 solid #fff;
