--- a/src/components/operationImage/crop.less
+++ b/src/components/operationImage/crop.less
@@ -1,5 +1,15 @@
 @import './iconfont/iconfont.less';
-
+.cropper-drag-box {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.cropper-modal {
+  background-color: #000;
+  opacity: .5;
+}
 .cropper-wrap-box{
     bottom: 0;
     left: 0;
@@ -10,17 +20,8 @@
     .cropper-crop {
         cursor: crosshair;
     }
-    .cropper-modal{
-        background-color: #000;
-        opacity: .5;
-    }
-    .cropper-drag-box{
-        bottom: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
+    
+    
     .cropper-crop-box{
         bottom: 0;
         left: 0;
@@ -124,6 +125,7 @@
           display: block;
           position: absolute;
           background-color: inherit;
+          text-transform: none;
           &.point-ne {
             border-top: @border-width solid #fff;
             border-right: @border-width solid #fff;
